@@ -15,8 +15,8 @@ function filefield_paths_settings_form($form, $form_state) {
   $form['filefield_paths_temp_location'] = array(
     '#title'            => t('Temporary file location'),
     '#type'             => 'textfield',
-    '#default_value'    => variable_get('filefield_paths_temp_location', 'public://filefield_paths'),
-    '#description'      => t('The location that unprocessed files will be uploaded priot to being processed by File (Field) Paths.<br />It is recommended that you use the temporary file system (temporary://) if your server configuration allows for that.'),
+    '#default_value'    => variable_get('filefield_paths_temp_location', filefield_paths_recommended_temporary_scheme() . 'filefield_paths'),
+    '#description'      => t('The location that unprocessed files will be uploaded prior to being processed by File (Field) Paths.<br />It is recommended that you use the temporary file system (temporary://) or, as a 2nd choice, the private file system (private://) if your server configuration allows for one of those.<br /><strong>Never use the public directory (public://) if the site supports private files, or private files can be temporarily exposed publicly.</strong>'),
     '#element_validate' => array('filefield_paths_settings_form_temp_location_validate'),
   );
 
