@@ -7,6 +7,7 @@ test_dependencies[] = token
 test_dependencies[] = transliteration
 configure = admin/config/media/file-system/filefield-paths
 core = 7.x
+php = 5.3
 
 
 
@@ -21,8 +22,6 @@ files[] = tests/pathauto.test
 files[] = tests/redirect.test
 files[] = tests/transliteration.test
 
-; Information added by Drupal.org packaging script on 2018-08-14
-version = "7.x-1.1"
-core = "7.x"
-project = "filefield_paths"
-datestamp = "1534256584"
+version = 7.x-1.3
+project = filefield_paths
+datestamp = 1771452791
