@@ -53,7 +53,7 @@ function filefield_paths_form_alter(&$form) {
       '#type'          => 'checkbox',
       '#title'         => t('Enable File (Field) Paths?'),
       '#default_value' => isset($form['#instance']['settings']['filefield_paths_enabled']) ? $form['#instance']['settings']['filefield_paths_enabled'] : TRUE,
-      '#weight'        => 2,
+      '#weight'        => 3,
     );
 
     // Hide standard File directory field.
@@ -191,6 +191,28 @@ function filefield_paths_form_alter(&$form) {
 }
 
 /**
+ * Get the recommended file scheme based on which file systems are enabled.
+ */
+function filefield_paths_recommended_temporary_scheme() {
+  $scheme =& drupal_static(__FUNCTION__);
+  if (!$scheme) {
+    $scheme = 'public://';
+    $recommended = array('temporary', 'private');
+    $wrappers = stream_get_wrappers();
+    foreach ($recommended as $wrapper) {
+      if (in_array($wrapper, $wrappers)) {
+        $path = $wrapper . '://';
+        if (is_writable($path)) {
+          $scheme = $path;
+          break;
+        }
+      }
+    }
+  }
+  return $scheme;
+}
+
+/**
  * Recursively set temporary upload location of all File (Field) Paths enabled
  * managed file fields.
  *
@@ -200,7 +222,7 @@ function filefield_paths_temporary_upload_location(&$element) {
   if (isset($element['#type']) && $element['#type'] == 'managed_file' && isset($element['#entity_type']) && isset($element['#field_name']) && isset($element['#bundle'])) {
     $instance = field_info_instance($element['#entity_type'], $element['#field_name'], $element['#bundle']);
     if (isset($instance['settings']['filefield_paths_enabled']) && $instance['settings']['filefield_paths_enabled']) {
-      $element['#upload_location'] = variable_get('filefield_paths_temp_location', 'public://filefield_paths');
+      $element['#upload_location'] = variable_get('filefield_paths_temp_location', filefield_paths_recommended_temporary_scheme() . 'filefield_paths');
     }
     return;
   }
