@@ -44,7 +44,7 @@ class FileFieldPathsUpdatesCase extends FileFieldPathsTestCase {
   public function testRetroBasic() {
     // Create an Image field.
     $field_name = drupal_strtolower($this->randomName());
-    $this->createImageField($field_name, $this->content_type, array());
+    $this->createImageField($field_name, $this->content_type, array(), array('file_directory' => ''));
 
     // Modify instance settings.
     $instance = field_info_instance('node', $field_name, $this->content_type);
